<resources>
    <string name="app_name">ICGC-Hamburg</string>
    <string name="no_users_found">No users found!</string>
    <string name="login">Login</string>
    <string name="enter_username">enter username</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="write_a_message">Type a message</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="enter_password">enter_password</string>
    <string name="button_contact_us">Contact Us</string>
    <string name="button_faccbook">Facebook Page</string>
    <string name="button_ICGC_Int">ICGC Int.</string>
    <string name="button_StudyGermany">Study in Germany</string>
    <string name="button_instagram">Instagram Page</string>
    <string name="button_chat">Chat</string>
    <string name="icgc_view">ICGC-Headquarter</string>
    <string name="call_button">Call Pastor</string>
    <string name="whatsapp_send">Message Us</string>
    <string name="church_web">Click Me</string>
    <string name="textView_church">ICGC_Hamburg</string>
    <string name="textView_email">Email</string>
    <string name="textView_web">Web</string>
    <string name="button_main">Main Page</string>
    <string name="textView_contact">Contact</string>
    <string name="textView_churchContactNumber">+4917624719930</string>
    <string name="textView_churchAddress">Church Address</string>
    <string name="church_address">Harburger Chaussee 121 20539 Hamburg , Germany</string>
    <string name="textView_emailAddress">hamburg.icgc@gmail.com</string>
    <string name="textView_churchWeb">www.ICGC_Hamburg</string>
    <string name="textView_contactAbout">About</string>
    <string name="textView_About"><p>We are a <b>Bible believing Church</b> committed to <b>raising leaders</b>, ""<b>shaping vision</b>, and <b>influencing society through Christ</b></p>" </string>
    <string name="textView_register">Register</string>
    <string name="action_delete">Delete all</string>
    <string name="created_at">Created At:</string>
    <string name="image_download_url">https://picsum.photos/200/300/?random</string>
</resources>

