<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:id="@+id/qwerty"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment
            android:id="@+id/main_fragment"
            android:name="com.afrosurv.ICGC_Hamburg.ItemFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/qwerty"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_add_white_24dp"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/qwerty"
        app:layout_anchorGravity="bottom|end" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/btn_rounded"
                android:elevation="6dp"
                android:padding="10dp"
                android:text="@string/button_ICGC_Int"
                android:textColor="@color/color_buttons"
                android:translationZ="0dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_rounded"
                android:elevation="6dp"
                android:padding="10dp"
                android:text="@string/button_contact_us"
                android:textColor="@color/color_buttons"
                android:translationZ="0dp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_rounded"
                android:elevation="6dp"
                android:padding="10dp"
                android:text="@string/button_StudyGermany"
                android:textColor="@color/color_buttons"
                android:translationZ="0dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_rounded"
                android:elevation="6dp"
                android:padding="10dp"
                android:text="@string/button_instagram"
                android:textColor="@color/color_buttons"
                android:translationZ="0dp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_rounded"
                android:elevation="6dp"
                android:padding="10dp"
                android:text="@string/button_faccbook"
                android:textColor="@color/color_buttons"
                android:translationZ="0dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_rounded"
                android:elevation="6dp"
                android:padding="10dp"
                android:text="@string/button_chat"
                android:textColor="@color/color_buttons"
                android:translationZ="0dp" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>